<?xml version="1.0" encoding="utf-8"?>
<!-- English strings for Book Poll app -->
<resources>
    <string name="app_name">Book Poll</string>
    <string name="my_text">Welcome to login</string>
    <string name="email_hint">E-Mail</string>
    <string name="password_hint">Password</string>
    <string name="btn_login_login_text">Login</string>
    <string name="link_to_register">Do not have an account? Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password_text">Enter your email address and we\'ll send you instructions to reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_link_send">Send Reset Link</string>
    <string name="create_acc">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="landing_page_title">Book Poll</string>
    <string name="logout">Logout</string>
    <string name="settings_description_text">Settings</string>
    <string name="add_book">Add Book</string>
    <string name="edit_book">Edit</string>
    <string name="update">Update</string>
    <string name="delete_book">Delete</string>
    <string name="no_books_yet">No books yet</string>
    <string name="add_first_book">Tap the + button to add your first book</string>
    <string name="details">Details</string>
    <string name="book_status">Book Status</string>
    <string name="toggle_status">Toggle Status</string>
    <string name="book_details">Book Details</string>
    <string name="book_id">Book ID:</string>
    <string name="owner">Owner:</string>
    <string name="thoughts">Thoughts:</string>
    <string name="created_date">Created:</string>
    <string name="last_updated">Last Updated:</string>
    <string name="book_cover">Book Cover</string>
    <string name="no_cover_image">No cover image</string>
    <string name="take_photo">Take Photo</string>
    <string name="remove">Remove</string>
    <string name="save_book">Save Book</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="thoughts_hint">Thoughts about this book</string>
    <string name="status_read">READ</string>
    <string name="status_unread">UNREAD</string>
    <string name="delete_confirmation_title">Delete Book</string>
    <string name="delete_confirmation_message">Are you sure you want to delete \'%1$s\'? This action cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="no_thoughts_added">No thoughts added yet</string>
    <string name="error_loading_book">Error loading book</string>
    <string name="error_updating_status">Error updating status</string>
    <string name="error_deleting_book">Error deleting book</string>
    <string name="book_deleted_successfully">Book deleted successfully</string>
    <string name="status_updated_to">Status updated to %1$s</string>
    <string name="only_own_books_status">You can only change status of your own books</string>
</resources>